@@ -1,3 +1,7 @@
+2010-03-31  Kai Tietz  <kai.tietz@onevision.com>
+
+	* assert.h (assert): Add default ASCII version.
+
 2010-03-14  Jonathan Yong  <jon_y@users.sourceforge.net>
 	* math.h (frexp): Remove pure attribute.
 	(modf): ditto.
